--- a/style.css
+++ b/style.css
@@ -5,6 +5,30 @@ header{
     background-color: #05213D;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+}
+
+
+.container{
+    position: relative;
+    width: 1000px;
+    height: 300px;
+    margin: 240px auto;
+}
+
+.container .box{
+    position: relative;
+    width: calc(400px - 20px);
+    height: calc(300px - 20px);
+    background: #D9D9D9;
+    float: left;
+    margin: 15px;
+    box-sizing: border-box;
+    overflow: hidden;
+    border-radius: 10px;
+}
 
 .header__logo{
 
